<resources>
    <string name="app_name">PesoIdealV2</string>
    <string name="lblPeso">Peso (em kg): </string>
    <string name="lblAltura">Altura (em metros):</string>
    <string name="lblIdade">Idade (em anos):</string>
    <string name="lblSexo">Sexo:</string>
    <string name="lblMasculino">Masculino</string>
    <string name="lblFeminino">Feminino</string>
    <string name="btnCalcular">Calcular IMC</string>
    <string name="title_activity_result">ResultActivity</string>



</resources>
