<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pesoideal.wpos.com.br.pesoidealv2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/lblPeso"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lblPeso"
                />

            <EditText
                android:id="@+id/txtPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="text">
                <requestFocus/>
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/lblAltura"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lblAltura"/>
            <EditText
                android:id="@+id/txtAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/lblIdade"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lblIdade"/>
            <EditText
                android:id="@+id/txtIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/lblSexo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lblSexo"/>






            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radio_Sexo"
                >
                <RadioButton android:id="@+id/radio_Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblMasculino"

                    />
                <RadioButton android:id="@+id/radio_Feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFeminino"

                    />
            </RadioGroup>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="10dp">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:onClick="calcularIMC"
                />
        </LinearLayout>
    </LinearLayout>







</android.support.constraint.ConstraintLayout>
